app/assets/stylesheets/components/_message_column.scss
body {
  background-color: #f2f2f2;
}

.message-list {
  overflow: scroll;
  height:50vh;
  margin-top: 10px;
  margin-bottom: 16px;
}

.message {
  display: flex;
  margin-bottom: 20px;
  align-items: flex-start;
}

.message-img {
  flex-shrink: 0;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  margin-right: 10px;
}

.message-img img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.message-content {
  background-color: white;
  padding: 10px;
  border-radius: 1px;
  border: solid 1px $green;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
}

.message-content:hover {
  background-color: $light-gray;
}

.dark-mode {
  .message-content {
    border: solid 1px #5f6368;
    background-color: #3c4043;
  }
}

.message-header {
  display: flex;
  align-items: center;
  margin-bottom: 5px;
}

.message-name {
  font-weight: bold;
  margin-right: 5px;
}

.message-time {
  font-size: 12px;
  color: #999;
}

.message-body {
  margin: 5px 0;
  font-size: 14px;
  line-height: 1.5;
}

.message-content .message-actions {
  position: absolute;
  right: 60px;
  top: -24px;
  width: 60px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 10px;
}

.message-actions .btn {
  font-size: 12px;
  border-radius: 1px;
  padding-right: 1rem;
  padding-left: 1rem;
  color: #000;
  line-height: 1;
}

.message-actions .btn-primary {
  background-color: white;
  border-color: $purple;
  color: $purple;
  margin: 2px;
}

.message-actions .btn-primary:hover {
  border-color: $purple;
  background-color: $purple;
  color: white;
}

.message-actions .btn-secondary {
  background-color: white;
  border-color: #ccc;
  color: #555;
}

.message-actions .btn-secondary:hover {
  background-color: #f9f9f9;
  border-color: #bbb;
  color: #555;
}

.message-input {
  position: sticky;
  top: 0;
  margin-right: 8px;
  margin-top: 8px;
}

.message-input-bar {
  margin-right: 16px;
}

.message-helpful {
  position: absolute;
  right: -12x;
  bottom: -12px;
  margin-top: 10px;
}

.message-helpful .btn {
  font-size: 12px;
  border-radius: 20px;
  padding-right: 1rem;
  padding-left: 1rem;
  background-color: transparent;
  color: #000;
  line-height: 1;
}

.message-helpful .btn-primary {
  background-color: $green;
  color: white;
}

.message-helpful .btn-primary:hover {
  background-color: #0069d9;
  border-color: #0062cc;
  color: white;
}

.message-helpful .btn-secondary {
  background-color: white;
  border-color: #ccc;
  color: #555;
}

.message-helpful .btn-secondary:hover {
  background-color: #f9f9f9;
  border-color: #bbb;
  color: #555;
}

.message-top {
  border-bottom: 1px solid $orange;
}

.message-top p {
  margin-bottom: 12px;
}

